# Breakout

./: .gitignore  .gitmodules  BreakoutConfig.h.in  CMakeLists.txt  README.md
3rd/: FindIrrKlang.cmake
3rd/freetype/: ChangeLog  ChangeLog.21  Jamfile  Jamrules
3rd/freetype/builds/amiga/include/config/: ftmodule.h
3rd/freetype/builds/amiga/src/base/: ftdebug.c  ftsystem.c
3rd/freetype/builds/cmake/: testbuild.sh
3rd/freetype/builds/mac/: ftmac.c
3rd/freetype/builds/vms/: ftconfig.h  ftsystem.c
3rd/freetype/builds/wince/vc2005-ce/: index.html
3rd/freetype/builds/wince/vc2008-ce/: index.html
3rd/freetype/builds/windows/vc2010/: index.html
3rd/freetype/builds/windows/visualc/: index.html
3rd/freetype/builds/windows/visualce/: index.html
3rd/freetype/devel/: ftoption.h
3rd/freetype/docs/: CHANGES  INSTALL.ANY  VERSIONS.TXT  freetype-config.1
3rd/freetype/docs/reference/: 404.html  ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-color_management.html  ft2-computations.html  ft2-error_code_values.html  ft2-error_enumerations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-header_inclusion.html  ft2-incremental.html  ft2-index.html  ft2-layer_management.html  ft2-lcd_rendering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-parameter_tags.html  ft2-pcf_driver.html  ft2-pfr_fonts.html  ft2-properties.html  ft2-quick_advance.html  ft2-raster.html  (+13 more)
3rd/freetype/src/: Jamfile
3rd/freetype/src/autofit/: Jamfile
3rd/freetype/src/base/: Jamfile
3rd/freetype/src/bdf/: Jamfile
3rd/freetype/src/bzip2/: Jamfile
3rd/freetype/src/cache/: Jamfile
3rd/freetype/src/cff/: Jamfile
3rd/freetype/src/cid/: Jamfile
3rd/freetype/src/gxvalid/: Jamfile
3rd/freetype/src/gzip/: Jamfile
3rd/freetype/src/lzw/: Jamfile
3rd/freetype/src/otvalid/: Jamfile
3rd/freetype/src/pcf/: Jamfile
3rd/freetype/src/pfr/: Jamfile
3rd/freetype/src/psaux/: Jamfile
3rd/freetype/src/pshinter/: Jamfile
3rd/freetype/src/psnames/: Jamfile
3rd/freetype/src/raster/: Jamfile
3rd/freetype/src/sfnt/: Jamfile
3rd/freetype/src/smooth/: Jamfile  module.mk
3rd/freetype/src/truetype/: Jamfile
3rd/freetype/src/type1/: Jamfile
3rd/freetype/src/type42/: Jamfile
3rd/freetype/src/winfonts/: Jamfile
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
3rd/irrKlang-1.6.0/lib/Win32-visualStudio/: irrKlang.exp
resources/levels/: one.lvl  three.lvl  two.lvl
resources/shaders/: particle.frag  particle.vs  picture.frag  picture.vs  post_processing.frag  post_processing.vs  sprite.frag  sprite.vs  text.frag  text.vs
src/: game.cc  game.h  main.cc  resource_manager.h  shader.h  texture.h
src/core/: fps.cc  fps.h  game.cc  game.h  resource_manager.cc  resource_manager.h
src/game/: ball_object.cc  ball_object.h  game.cc  game.h  game_level.cc  game_level.h  game_object.cc  game_object.h  power_up.h
src/render/: particle.cc  particle.h  post_processor.cc  post_processor.h  shader.cc  sprite_renderer.cc  sprite_renderer.h  text_renderer.cc  text_renderer.h  texture.cc
src/utils/: circle.cc  circle.h  collision.cc  collision.h  collision_detect.cc  collision_detect.h  display.cc  display.h  rect.cc  rect.h
